fix modal vertical alignment by removing excess top margin #8

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -69,7 +69,7 @@
   left: 5%;
 
   &.in {
-    top: 50% !important;
+    top: 40% !important;
   }
 
   .modal-footer {
